# NLP-With-HuggingFace

./: .gitignore  LICENSE  README.md  pyproject.toml
Chap01Base/: 0.start.docx  1.introduction.ipynb  2.tokenizer.ipynb  3.datasets.ipynb  4.metrics.ipynb
Chap02Application/: 1.classifier.ipynb  2.translator.ipynb  3.ner.ipynb  4.unmasker.ipynb  5.text_generator.ipynb  6.summary.ipynb  7.question_answerer.ipynb  8.visualize.ipynb  model.onnx  model_structure
