[project]
name = "hf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "onnx>=1.20.0",
    "onnxscript>=0.5.7",
    "pandas>=2.3.3",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchviz>=0.0.3",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
name = "uvmirror"
default = true
#北京外国语大学
#url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
#清华大学
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
#腾讯云
#url = "https://mirrors.cloud.tencent.com/pypi/simple/"
#阿里云
#url = "https://mirrors.aliyun.com/pypi/simple/"
#中国科学技术大学
#url = "https://pypi.mirrors.ustc.edu.cn/simple/"

[tool.uv]
cache-dir = ".\\uv_cache"
